# lluvia

./: .bazelrc  .cirrus.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  404.html  BUILD  BUILD.bazel  CMakeLists.txt  CNAME  Doxyfile  README.md  WORKSPACE  index.html  index.xml  offline-search-index.0c277a706f3e4b5edd35861e2d7e48d9.json  offline-search-index.48d9196c005aebe8b1c4c7ae29193612.json  offline-search-index.6156b3636f336135fc7c3d97c9f421d9.json  offline-search-index.81a3a9ca935ef8e026f4009a1aeac38c.json  offline-search-index.871df1b43d548101b98b6e936b290064.json  offline-search-index.954c1b1cfcaa40b8cae60083ad855f6e.json  offline-search-index.a8d1be192d5cb101362310b24616e686.json  offline-search-index.da6fcc8c302979b15fd7b5a063a71220.json  requirements.txt  sitemap.xml  version.bzl
core/: CMakeLists.txt
core/include/lluvia/: core.h  core.hpp
core/src/: Buffer.cpp  CommandBuffer.cpp  ComputeGraph.cpp  ComputeGraphFileWriter.cpp  ComputeNode.cpp  ComputeNodeDescriptor.cpp  ContainerNode.cpp  ContainerNodeDescriptor.cpp  Image.cpp  ImageDescriptor.cpp  ImageView.cpp  ImageViewDescriptor.cpp  Interpreter.cpp  Memory.cpp  MemoryAllocationInfo.cpp  Node.cpp  Object.cpp  Parameter.cpp  Program.cpp  Session.cpp  Shader.cpp  error.cpp  io.cpp  utils.cpp
core/src/impl/: ComputeNodeDescriptor.cpp  Interpreter.cpp  MemoryFreeSpaceManager.cpp  MemoryHeap.cpp  OneTimeSubmitCommandBuffer.cpp
core/src/new/: ComputeNode.cpp  Node.cpp
core/src/scripting/: Interpreter.cpp
core/test/: test_BufferCopy.cpp  test_BufferCreation.cpp  test_BufferMapping.cpp  test_ComputeGraphWriter.cpp  test_ComputeNode.cpp  test_ComputeNodeImage.cpp  test_IO.cpp  test_ImageCreation.cpp  test_Interpreter.cpp  test_MemoryFreeSpaceManager.cpp  test_ProgramCreation.cpp  test_SessionCreation.cpp  test_VulkanDriver.cpp  test_scripting.cpp  test_utils.cpp
core/test/data/: ComputeNodeDescriptor.json  badJSON.json  buffers.json  computeNode.json  images.json
core/test/include/: .gitignore  coreTestConfig.h.in
cpp/core/: BUILD.bazel
cpp/core/src/: Buffer.cpp  CommandBuffer.cpp  ComputeNode.cpp  ComputeNodeDescriptor.cpp  ContainerNode.cpp  Duration.cpp  Image.cpp  ImageDescriptor.cpp  ImageView.cpp  Interpreter.cpp  Memory.cpp  Program.cpp  Session.cpp
cpp/core/test/: test_Base64.cpp  test_BufferCopy.cpp  test_BufferCreation.cpp  test_BufferMapping.cpp  test_ComputeNode.cpp  test_ComputeNodeImage.cpp  test_Device_creation.cpp  test_Duration.cpp  test_ImageCreation.cpp  test_Interpreter.cpp  test_MemoryFreeSpaceManager.cpp  test_ProgramCreation.cpp  test_PushConstants.cpp  test_SessionCreation.cpp  test_VulkanDriver.cpp  test_utils.cpp
examples/imagePyramid_lua/: BUILD.bazel
examples/imagePyramid_lua/lua/: ImageDownsampleY.lua  ImagePyramid.lua
examples/imagePyramid_lua/src/: main.cpp
examples/lluvia-docs/memory/: BUILD.bazel  test_createMemory.cpp  test_createObjects.cpp
glsl/: BUILD.bazel  CMakeLists.txt  assign.comp  imageToBuffer.comp  imgToBuffer.comp  textureToBuffer.comp
glsl/lib/: BUILD.bazel
glsl/shaders/color/: rgba2gray_uint8.comp  rgba2hsva_8ui.comp  rgba2hsva_uint8.comp
glsl/shaders/imgproc/: imgdownX_r8ui.comp  imgdownX_rgba8ui.comp  imgdownY_rgba8ui.comp
lluvia/: BUILD.bazel
lluvia/bazel/: config.bzl  workspace.bzl
lluvia/bazel/cython/: def.bzl  macros.bzl
lluvia/bazel/expand_template/: def.bzl  rules.bzl
lluvia/bazel/glsl/: def.bzl  rules.bzl
lluvia/bazel/node/: def.bzl  macros.bzl
lluvia/bazel/python/: BUILD.bazel  linux.bzl  python_windows.bzl
lluvia/cpp/: BUILD.bazel  config.bzl
lluvia/cpp/core/: BUILD.bazel
lluvia/cpp/proto/: BUILD.bazel.ignore
lluvia/glsl/lib/: BUILD.bazel
lluvia/lua/: BUILD.bazel
lluvia/lua/ll/: library.lua
lluvia/nodes/: BUILD.bazel  def.bzl
lluvia/nodes/lluvia/: BUILD.bazel  RGBA2Gray.comp  Sobel.comp  Sobel.lua
lluvia/python/: BUILD.bazel  setup.py
lluvia/python/src/: BUILD.bazel
lluvia/python/test/: BUILD.bazel  config.bzl
lluvia/resources/: BUILD.bazel
lluvia/tools/expand_template/: BUILD.bazel  expand_template.py
platform/: BUILD.bazel  values.bzl
platform/linux/: python.bzl
platform/windows/: python.bzl  vulkan_sdk.bzl
python/: .gitignore  BUILD.bazel  build.sh  moni.py  requirements.txt  setup.cfg  setup.py
python/doc/source/: conf.py
python/lluvia/: __init__.py
python/lluvia/core/: __init__.py  buffer.pxd  buffer.pyx  command_buffer.pxd  command_buffer.pyx  compute_node.pxd  compute_node.pyx  core_buffer.pyx  image.pxd  image.pyx  io.pyx  memory.pxd  memory.pyx  object.pxd  session.pxd  session.pyx  vulkan.pxd
python/lluvia/z_impl/: __init__.py  memory.pxd  memory.pyx  session.pxd  session.pyx  vulkan.pxd
python/src/: BUILD.bazel
python/src/lluvia/: __init__.py  util.py
python/test/: test_moni.py  test_session.py
python/test/core/: test_buffer.py  test_compute.py  test_image.py
samples/imagePyramid/: BUILD.bazel  CMakeLists.txt
samples/imagePyramid/glsl/: imageDownsampleX.comp  imageDownsampleY.comp
samples/imagePyramid/include/: ImagePyramid.h
samples/imagePyramid/src/: ImagePyramid.cpp  main.cpp
samples/imagePyramid_lua/: BUILD.bazel  CMakeLists.txt
samples/imagePyramid_lua/glsl/: ImageDownsampleX.comp  ImageDownsampleY.comp  imageDownsampleX.comp
samples/imagePyramid_lua/include/: ImagePyramid.h
samples/imagePyramid_lua/lua/: ImageDownsampleX.lua  ImageDownsampleY.lua  ImagePyramid.lua  imageDownsampleX.lua  imageDownsampleY.lua  imagePyramid.lua
samples/imagePyramid_lua/src/: ImagePyramid.cpp  main.cpp
samples/lluvia-docs/session/: BUILD.bazel  test_sessionCreate.cpp
samples/opticalFlow/: BUILD.bazel  CMakeLists.txt
samples/opticalFlow/cpp/: main.cpp
samples/opticalFlow/glsl/: Flow2RGBA.comp  FlowPredictPayloadX.comp  FlowPredictPayloadY.comp  FlowPredictX.comp  FlowPredictY.comp  FlowSmooth.comp  FlowUpdate.comp  FlowUpdateDelta.comp  HSVA2RGBA.comp  ImageDownsampleY_8ui.comp  ImageModel.comp  RGBA2Gray.comp  RGBA2HSVA.comp
samples/opticalFlowCpp/: BUILD.bazel  main.cpp
tools/expand_template/: BUILD.bazel  expand_template.py
(+1779 files in other folders)
