load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")

filegroup(
    name = "readme_file",
    srcs = [
        "README.md"
    ],
    visibility = ["//visibility:public"]
)

###########################################################
# FIXME: workaround for Windows 10
py_runtime(
    name = "my_py2_runtime",
    interpreter_path = "C:/Python27/python.exe",
    python_version = "PY2",
)

py_runtime(
    name = "my_py3_runtime",
    interpreter_path = "C:/Users/juana/AppData/Local/Microsoft/WindowsApps/python3.exe",
    python_version = "PY3",
)

py_runtime_pair(
    name = "my_py_runtime_pair",
    py2_runtime = ":my_py2_runtime",
    py3_runtime = ":my_py3_runtime",
)

toolchain(
    name = "python_toolchain",
    # target_compatible_with = [...],  # optional platform constraints
    toolchain = ":my_py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)

###########################################################