
config_setting (
    name = "linux",
    constraint_values = [
        "@platforms//os:linux"
    ],
    visibility = ["//visibility:public"]
)

config_setting (
    name = "android",
    values = {
        # same as that of mediapipe
        "crosstool_top": "//external:android/crosstool"
    },
    visibility = ["//visibility:public"]
)

config_setting (
    name = "windows",
    constraint_values = [
        "@platforms//os:windows"
    ],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "readme_file",
    srcs = [
        "README.md"
    ],
    visibility = ["//visibility:public"]
)
