load("//bazel/cython:def.bzl", "pyx_library")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_test(
    name = "test_moni",
    srcs = [
        "test/test_moni.py"
    ],
    srcs_version = "PY3",
    legacy_create_init = 0,
    deps = [
        "//python/src:pyx_library"
    ]
)

py_binary(
    name = "moni",
    srcs = [
        "moni.py"
    ],
    srcs_version = "PY3",
    legacy_create_init = 0,
    deps = [
        "//python/src:pyx_library"
    ]
)
