load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library (
    name = "core_cc_library",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/**/*.h"]),
    strip_include_prefix = "include/",
    copts = [
        "--std=c++17",
        "-stdlib=libstdc++",
    ],
    linkstatic = True,
    linkopts = [
        "-lvulkan",
        "-lm",
        "-ldl",
    ],
    deps = [
        "@sol//:sol_cc_library",
        "@lua//:lua_cc_library",
    ],
    visibility = ["//visibility:public"]
)

cc_test (
    name = "test_base64",
    srcs = ["test/test_Base64.cpp"],
    copts = [
        "--std=c++17",
    ],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)
