"""
"""

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@//bazel/expand_template:def.bzl", "expand_template")

expand_template(
    name = "core_lua_cc_library_header",
    template = "include/lluvia/core/impl/LuaLibrary.h.in",
    file_vars = {
        "LUA": "lua/ll/library.lua"
    },
    data = [
        "//lua:ll_lua_library"
    ],
)

cc_library (
    name = "core_cc_library",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/**/*.h"]) + [":core_lua_cc_library_header"],
    strip_include_prefix = "include/",
    copts = [
        "--std=c++17",
        "-stdlib=libstdc++",
    ],
    linkstatic = True,
    linkopts = [
        "-lvulkan",
        "-lm",
        "-ldl",
    ],
    deps = [
        "@sol//:sol_cc_library",
        "@lua//:lua_cc_library",
    ],
    visibility = ["//visibility:public"]
)

cc_test (
    name = "test_Base64",
    srcs = ["test/test_Base64.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_BufferCopy",
    srcs = ["test/test_BufferCopy.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_BufferCreation",
    srcs = ["test/test_BufferCreation.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_BufferMapping",
    srcs = ["test/test_BufferMapping.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_ComputeNode",
    srcs = ["test/test_ComputeNode.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//cpp/core/test/glsl:assign_shader"
    ]
)

cc_test (
    name = "test_ComputeNodeImage",
    srcs = ["test/test_ComputeNodeImage.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//cpp/core/test/glsl:image_to_buffer_shader",
        "//cpp/core/test/glsl:texture_to_buffer_shader"
    ]
)

cc_test (
    name = "test_ImageCreation",
    srcs = ["test/test_ImageCreation.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_ImageCopy",
    srcs = ["test/test_ImageCopy.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_Interpreter",
    srcs = ["test/test_Interpreter.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_MemoryFreeSpaceManager",
    srcs = ["test/test_MemoryFreeSpaceManager.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_ProgramCreation",
    srcs = ["test/test_ProgramCreation.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//cpp/core/test/glsl:assign_shader"
    ]
)

cc_test (
    name = "test_SessionCreation",
    srcs = ["test/test_SessionCreation.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_utils",
    srcs = ["test/test_utils.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_VulkanDriver",
    srcs = ["test/test_VulkanDriver.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
)

cc_test (
    name = "test_PushConstants",
    srcs = ["test/test_PushConstants.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//cpp/core/test/glsl:pushConstants_shader",
        "//cpp/core/test/glsl:pushConstants2_shader",
    ]
)

cc_test (
    name = "test_Duration",
    srcs = ["test/test_Duration.cpp"],
    copts = ["--std=c++17",],
    deps = [
        ":core_cc_library",
        "@catch//:catch_cc_library"
    ],
    data = [
        "//cpp/core/test/glsl:assign_shader"
    ]
)
