load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_vulkan//glsl:defs.bzl", "glsl_shader")

config_setting(
    name = "on_linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "on_windows",
    constraint_values = [
        "@platforms//os:windows",
    ],
)

glsl_shader(
    name = "ImageDownsampleX_shader",
    shader = "glsl/ImageDownsampleX.comp",
    visibility = ["//visibility:public"],
    deps = [
        "@lluvia//lluvia/glsl/lib:lluvia_glsl_library",
    ],
)

glsl_shader(
    name = "ImageDownsampleY_shader",
    shader = "glsl/ImageDownsampleY.comp",
    visibility = ["//visibility:public"],
    deps = [
        "@lluvia//lluvia/glsl/lib:lluvia_glsl_library",
    ],
)

cc_binary(
    name = "imagePyramid_lua",
    srcs = [
        "src/main.cpp",
    ],
    copts = select({
        ":on_linux": [
            "--std=c++17",
            "-stdlib=libstdc++",
        ],
        ":on_windows": [
            "/std:c++17",
        ],
    }),
    data = [
        "lua/ImageDownsampleX.lua",
        "lua/ImageDownsampleY.lua",
        "lua/ImagePyramid.lua",
        ":ImageDownsampleX_shader",
        ":ImageDownsampleY_shader",
    ],
    linkopts = [
        "-lstdc++fs",
    ],
    deps = [
        "@lluvia//lluvia/cpp/core:core_cc_library",
        "@stb//:stb_image_cc_library",
    ],
)
