load("@lluvia//lluvia/bazel/node:def.bzl", "ll_node_library")


ll_node_library(
    name = "lluvia_node_library",
    strip_prefix = "/lluvia/nodes",
    nodes = [
        "@lluvia//lluvia/nodes/lluvia:Sobel",
        "@lluvia//lluvia/nodes/lluvia/color:RGBA2Gray",
        "@lluvia//lluvia/nodes/lluvia/color:RGBA2HSVA",
        "@lluvia//lluvia/nodes/lluvia/color:HSVA2RGBA",
        "@lluvia//lluvia/nodes/lluvia/imgproc:ImageDownsampleX_r8ui",
        "@lluvia//lluvia/nodes/lluvia/imgproc:ImageDownsampleY_r8ui",
        "@lluvia//lluvia/nodes/lluvia/imgproc:ImagePyramid_r8ui",
    ],
    visibility = ["//visibility:public"]
)
