load("@lluvia//lluvia/bazel/node:def.bzl", "ll_node_library")


ll_node_library(
    name = "lluvia_node_library",
    strip_prefix = "/lluvia/nodes",
    nodes = [
        "@lluvia//lluvia/nodes/lluvia:Sobel",
        "@lluvia//lluvia/nodes/lluvia/color:HSVA2RGBA",
        "@lluvia//lluvia/nodes/lluvia/color:RGBA2Gray",
        "@lluvia//lluvia/nodes/lluvia/color:RGBA2HSVA",
        "@lluvia//lluvia/nodes/lluvia/imgproc:ImageDownsampleX_r8ui",
        "@lluvia//lluvia/nodes/lluvia/imgproc:ImageDownsampleY_r8ui",
        "@lluvia//lluvia/nodes/lluvia/imgproc:ImagePyramid_r8ui",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowFilter",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowFilterDelta",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowFilterSimple",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowPredict",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowPredictPayload",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowPredictPayloadX",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowPredictPayloadY",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowPredictX",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowPredictY",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowSmooth",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowUpdate",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:FlowUpdateDelta",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/flowfilter:ImageModel",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/HornSchunck:ImageProcessor",
        "@lluvia//lluvia/nodes/lluvia/opticalflow/HornSchunck:NumericIteration",
        "@lluvia//lluvia/nodes/lluvia/viz:Flow2RGBA",
    ],
    visibility = ["//visibility:public"]
)
