load("@lluvia//lluvia/bazel/node:def.bzl", "ll_node_library")
load("@lluvia//lluvia/nodes:def.bzl",
    "LLUVIA_NODE_LIBRARY_STRIP_PREFIX",
    "LLUVIA_NODE_LIBRARY_NODES")

ll_node_library(
    name = "lluvia_node_library",
    strip_prefix = LLUVIA_NODE_LIBRARY_STRIP_PREFIX,
    nodes = LLUVIA_NODE_LIBRARY_NODES,
    visibility = ["//visibility:public"]
)
