load("@rules_python//experimental/python:wheel.bzl", "py_package", "py_wheel")
load("@lluvia//:version.bzl", "VERSION")

py_package(
    name = "lluvia_package",
    packages = [
        "lluvia",
        "lluvia.core",
        "lluvia.core.enums",
        "lluvia.core.impl",
    ],
    deps = [
        "//lluvia/python/src:pyx_library",
        "//lluvia/nodes:lluvia_node_library",
        "//lluvia/glsl/lib:lluvia_glsl_library",
    ],
    visibility = ["//visibility:public"]
)

py_wheel(
    name = "lluvia_wheel",
    author = "Juan David Adarve Bermudez",
    author_email = "juanda0718@gmail.com",
    classifiers = [
        "License :: OSI Approved :: Apache 2 Software License",
        "Intended Audience :: Developers",
    ],
    description_file = "//:readme_file",
    distribution = "lluvia",
    homepage = "lluvia.ai",
    python_tag = "py3",
    strip_path_prefixes = [
        "lluvia/python/src",
    ],
    version = VERSION,
    deps = [":lluvia_package"],
    visibility = ["//visibility:public"]
)
