load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@//bazel/glsl:def.bzl", "glsl_shader")

glsl_shader(
    name = "imageDownsampleX_shader",
    shader = "glsl/imageDownsampleX.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "imageDownsampleY_shader",
    shader = "glsl/imageDownsampleY.comp",
    deps = [
        "//glsl/lib:lluvia_glsl_library"
    ],
    visibility = ["//visibility:public"]
)

cc_library (
    name = "imagePyramid_cc_library",
    hdrs = [
        "include/ImagePyramid.h",
    ],
    srcs = [
        "src/ImagePyramid.cpp",
    ],
    copts = [
        "--std=c++17",
        "-stdlib=libstdc++",
    ],
    linkopts = [
        "-lstdc++fs"
    ],
    deps = [
        "//cpp/core:core_cc_library",
        "@stb//:stb_image_cc_library",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_binary (
    name = "imagePyramid",
    srcs = [
        "src/main.cpp"
    ],
    copts = [
        "--std=c++17",
        "-stdlib=libstdc++",
    ],
    linkopts = [
        "-lstdc++fs"
    ],
    deps = [
        ":imagePyramid_cc_library",
    ],
    data = [
        ":imageDownsampleX_shader",
        ":imageDownsampleY_shader"
    ]
)